--- a/JenkinsFile
+++ b/JenkinsFile
@@ -67,6 +67,7 @@ pipeline {
                    echo "deploy stage"
                    echo "deploying to site id: $NETLIFY_SITE_ID"
                    node_modules/.bin/netlify status
+                   node_modules/.bin/netlify deploy --dir=build --prod
                 '''
             }
         }
