--- a/JenkinsFile
+++ b/JenkinsFile
@@ -32,22 +32,22 @@ pipeline {
         //     }
         // }
 
-        // stage('test') {
-        //     agent {
-        //         docker
-        //         {
-        //             image 'node:18-alpine'
-        //             reuseNode true
-        //         }
-        //     }
-        //     steps {
-        //         sh '''
-        //         echo 'test stage'
-        //         test -f build/index.html
-        //         npm test
-        //         '''
-        //     }
-        // }
+        stage('test') {
+            agent {
+                docker
+                {
+                    image 'node:18-alpine'
+                    reuseNode true
+                }
+            }
+            steps {
+                sh '''
+                echo 'test stage'
+                test -f build/index.html
+                npm test
+                '''
+            }
+        }
 
         stage('deploy') {
             agent {
