--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,70 +2,254 @@ pipeline {
     agent any
 
     environment {
-        NETLIFY_SITE_ID = '56c3bd51-d041-4e5c-a990-927c1e606697'
+        NETLIFY_SITE_ID = 'dd4e9d15-e74e-4c5e-a45a-da5f9a024f29'
         NETLIFY_AUTH_TOKEN = credentials('netlify-token')
+        // REACT_APP_VERSION = '1.2.3'
+        REACT_APP_VERSION = "1.0.$BUILD_ID"
     }
 
     stages {
-        stage('Hello') {
+
+        stage('Docker') {
             steps {
-                echo 'Hello World'
+                sh 'docker build -t my-playwright .'
             }
         }
-
-        // stage('Build') {
-        //     agent {
-        //         docker
-        //         {
-        //             image 'node:18-alpine'
-        //             reuseNode true
-        //         }
-        //     }
-        //     steps {
-        //         sh '''
-        //             ls -la
-        //             node --version
-        //             npm ci
-        //             npm run build
-        //             ls -la
-        //         '''
-        //     }
-        // }
-
-        // stage('test') {
-        //     agent {
-        //         docker
-        //         {
-        //             image 'node:18-alpine'
-        //             reuseNode true
-        //         }
-        //     }
-        //     steps {
-        //         sh '''
-        //         echo 'test stage'
-        //         test -f build/index.html
-        //         npm test
-        //         '''
-        //     }
-        // }
-
-        stage('deploy') {
+        
+        stage('Build') {
             agent {
-                docker
-                {
+                docker {
                     image 'node:18-alpine'
                     reuseNode true
                 }
             }
             steps {
                 sh '''
-                npm install netlify-cli@20.1.1
-                node_modules/.bin/netlify --version
-                echo "deploying to site id: $NETLIFY_SITE_ID"
-                node_modules/.bin/netlify status
-                node_modules/.bin/netlify deploy --dir=build --prod
+                    ls -la
+                    node --version
+                    npm --version
+                    npm ci
+                    npm run build
+                    ls -la
                 '''
             }
         }
+
+        stage('Tests') {
+            parallel {
+                stage('Unit tests') {
+                    agent {
+                        docker {
+                            image 'node:18-alpine'
+                            reuseNode true
+                        }
+                    }
+
+                    steps {
+                        sh '''
+                            #test -f build/index.html
+                            npm test
+                        '''
+                    }
+                    post {
+                        always {
+                            junit 'jest-results/junit.xml'
+                        }
+                    }
+                }
+            }
+        }
+        
+        stage('E2E') {
+            agent {
+                docker {
+                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+                    reuseNode true
+                }
+            }
+
+            steps {
+                sh '''
+                    npm install serve
+                    node_modules/.bin/serve -s build &
+                    sleep 10
+                    npx playwright test  --reporter=html
+                '''
+            }
+
+            post {
+                always {
+                    publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright Local', reportTitles: '', useWrapperFileDirectly: true])
+                   
+                }
+            }
+        }
+    
+
+        // stage('Deploy Staging') {
+        //     agent {
+        //         docker {
+        //             image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+        //             reuseNode true
+        //         }
+        //     }
+
+        //      steps {
+        //         sh '''
+        //             npm install netlify-cli@20.1.1 node-jq
+        //             node_modules/.bin/netlify --version
+        //             echo "Deploying to staging. Site ID: $NETLIFY_SITE_ID"
+        //             node_modules/.bin/netlify status
+        //             node_modules/.bin/netlify deploy --dir=build --json > deploy-output.json
+        //             node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json
+        //         '''
+
+        //         script{
+        //             env.staging_url=sh(script:"node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json", returnStdout:true)
+        //         }
+        //     }
+        // }
+
+        //  stage('Staging E2E') {
+        //     agent {
+        //         docker {
+        //             image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+        //             reuseNode true
+        //         }
+        //     }
+
+        //     environment {
+        //         CI_ENVIRONMENT_URL = "${env.staging_url}"
+        //     }
+
+        //     steps {
+        //         sh '''
+        //             npx playwright test  --reporter=html
+        //         '''
+        //     }
+
+        //     post {
+        //         always {
+        //             publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Staging E2E', reportTitles: '', useWrapperFileDirectly: true])
+        //         }
+        //     }
+        // }
+
+        stage(' Deploy Staging') {
+            agent {
+                docker {
+                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+                    reuseNode true
+                }
+            }
+
+            environment {
+                CI_ENVIRONMENT_URL = 'staging_url has to be set'
+            }
+
+            steps {
+                sh '''
+                    npm install netlify-cli@20.1.1 node-jq
+                    node_modules/.bin/netlify --version
+                    echo "Deploying to staging. Site ID: $NETLIFY_SITE_ID"
+                    node_modules/.bin/netlify status
+                    node_modules/.bin/netlify deploy --dir=build --json > deploy-output.json
+                    node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json
+                    CI_ENVIRONMENT_URL=$(node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json)
+                    npx playwright test  --reporter=html
+                '''
+            }
+
+            post {
+                always {
+                    publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Staging E2E', reportTitles: '', useWrapperFileDirectly: true])
+                }
+            }
+        }
+
+        // stage('Approval')
+        // {
+        //     steps{
+        //         timeout(time: 15, unit: 'MINUTES') {
+        //             input message: 'Do you wish to deploy to production?', ok: 'Yes, I am sure!'
+        //         }
+        //     }
+        // }
+
+    //     stage('Deploy prod') {
+    //         agent {
+    //             docker {
+    //                 image 'node:18-alpine'
+    //                 reuseNode true
+    //             }
+    //         }
+    //         steps {
+    //             sh '''
+    //                 npm install netlify-cli@20.1.1
+    //                 node_modules/.bin/netlify --version
+    //                 echo "Deploying to production. Site ID: $NETLIFY_SITE_ID"
+    //                 node_modules/.bin/netlify status
+    //                 node_modules/.bin/netlify deploy --dir=build --prod
+    //             '''
+    //         }
+    //     }
+
+    //     stage('Prod E2E') {
+    //         agent {
+    //             docker {
+    //                 image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+    //                 reuseNode true
+    //             }
+    //         }
+
+    //         environment {
+    //             CI_ENVIRONMENT_URL = 'https://fanciful-empanada-c7edc2.netlify.app/'
+    //         }
+
+    //         steps {
+    //             sh '''
+    //                 npx playwright test  --reporter=html
+    //             '''
+    //         }
+
+    //         post {
+    //             always {
+    //                 publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright E2E', reportTitles: '', useWrapperFileDirectly: true])
+    //             }
+    //         }
+    // }
+
+     stage('Deploy Prod') {
+            agent {
+                docker {
+                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+                    reuseNode true
+                }
+            }
+
+            environment {
+                CI_ENVIRONMENT_URL = 'https://fanciful-empanada-c7edc2.netlify.app/'
+            }
+
+            steps {
+                sh '''
+                node --version
+                npm install netlify-cli@20.1.1
+                node_modules/.bin/netlify --version
+                echo "Deploying to production. Site ID: $NETLIFY_SITE_ID"
+                node_modules/.bin/netlify status
+                node_modules/.bin/netlify deploy --dir=build --prod
+                npx playwright test  --reporter=html
+                '''
+            }
+
+            post {
+                always {
+                    publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright E2E', reportTitles: '', useWrapperFileDirectly: true])
+                }
+            }
     }
 }
+}
+
+
